k8s/k8s.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eksms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: eksms
  name: deployment-eksms
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-eksms
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-eksms
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: app-eksms
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: eksms
  name: service-eksms
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-eksms
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eksms
  name: ingress-eksms
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-eksms
              port:
                number: 80
